Removed static references to plugin