@@ -54,13 +54,13 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Level;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class VampireRevamp extends JavaPlugin {
 
-	private static ConcurrentHashMap<UUID, VPlayer> playerCollection = new ConcurrentHashMap<>();
-	private static VampireRevamp plugin;
-	private static boolean isPapermc = false;
-	private static Permission perms = null;
+	private final ConcurrentHashMap<UUID, VPlayer> playerCollection = new ConcurrentHashMap<>();
+	private boolean isPapermc = false;
+	private Permission perms = null;
 
 	// -------------------------------------------- //
 	// INSTANCE & CONSTRUCT
@@ -70,12 +70,12 @@ public class VampireRevamp extends JavaPlugin {
 	private int cleanTaskId = -1;
 	private int theTaskId = -1;
 	private int batTaskId = -1;
-	public PaperCommandManager manager;
+	private PaperCommandManager manager;
 	public final Map<UUID, Boolean> batEnabled = new ConcurrentHashMap<>();
 	public final Set<LivingEntity> bats = new HashSet<>();
 	public final Map<UUID, List<LivingEntity>> batmap = new ConcurrentHashMap<>();
-	public boolean isDisguiseEnabled = false;
-	public boolean hasVault = false;
+	private boolean isDisguiseEnabled = false;
+	private boolean hasVault = false;
 	private PluginConfig conf = null;
 	private AltarDark altarDark;
 	private AltarLight altarLight;
@@ -98,8 +98,13 @@ public class VampireRevamp extends JavaPlugin {
 	// FIELDS
 	// -------------------------------------------- //
 
-	public static VersionCompat getVersionCompat() {
-		return plugin.vc;
+
+	public boolean isDisguiseEnabled() {
+		return isDisguiseEnabled;
+	}
+
+	public VersionCompat getVersionCompat() {
+		return vc;
 	}
 
 	public boolean setVampireGroup(Player player, boolean isVampire) {
@@ -116,7 +121,7 @@ public class VampireRevamp extends JavaPlugin {
 		return perms != null;
 	}
 
-	public static boolean isPaperMc() {
+	public boolean isPaperMc() {
 		return isPapermc;
 	}
 
@@ -128,20 +133,20 @@ public class VampireRevamp extends JavaPlugin {
 		return altarDark;
 	}
 
-	public static SemVer getServerVersion() {
-		return getInstance().serverVersion;
+	public SemVer getServerVersion() {
+		return serverVersion;
 	}
 
-	public static boolean isWorldGuardEnabled() {
-		return getInstance().wg != null && VampireRevamp.getVampireConfig().compatibility.useWorldGuardRegions;
+	public boolean isWorldGuardEnabled() {
+		return wg != null && getVampireConfig().compatibility.useWorldGuardRegions;
 	}
 
-	public static WorldGuardCompat getWorldGuardCompat() {
-		return getInstance().wg;
+	public WorldGuardCompat getWorldGuardCompat() {
+		return wg;
 	}
 
-	public static WerewolfCompat getWerewolvesCompat() {
-		return getInstance().ww;
+	public WerewolfCompat getWerewolvesCompat() {
+		return ww;
 	}
 
 	// -------------------------------------------- //
@@ -149,8 +154,6 @@ public class VampireRevamp extends JavaPlugin {
 	// -------------------------------------------- //
 	@Override
 	public void onLoad() {
-		plugin = this;
-
 		isPapermc = false;
 		try {
 			Class.forName("com.destroystokyo.paper.VersionHistoryManager$VersionData");
@@ -195,7 +198,7 @@ public class VampireRevamp extends JavaPlugin {
 		}
 
 		try {
-			vc = new VersionCompat(serverVersion);
+			vc = new VersionCompat(this, serverVersion);
 			// Test versionCompat is working
 			vc.test();
 		}
@@ -221,13 +224,13 @@ public class VampireRevamp extends JavaPlugin {
 
 		// WorldGuard compat
 		if (Bukkit.getPluginManager().getPlugin("WorldGuard") != null)
-			wg = new WorldGuardCompat();
+			wg = new WorldGuardCompat(this);
 		else
 			log(Level.WARNING, "WorldGuard plugin not detected. Disabled WorldGuard compat.");
 
 		// ProtocolLib compat
 		if (Bukkit.getPluginManager().getPlugin("ProtocolLib") != null)
-			plc = new ProtocolLibCompat();
+			plc = new ProtocolLibCompat(this);
 		else
 			log(Level.WARNING, "ProtocolLib plugin not detected. Disabled ProtocolLib compat.");
 
@@ -262,7 +265,7 @@ public class VampireRevamp extends JavaPlugin {
 		}
 
 		if (!configFile.exists()) {
-			PluginConfig conf = new PluginConfig();
+			PluginConfig conf = new PluginConfig(this);
 			conf.saveConfigToFile(configFile);
 		}
 	}
@@ -280,7 +283,7 @@ public class VampireRevamp extends JavaPlugin {
 
 	public void loadCompat() {
 		// Werewolves compat
-		ww = new WerewolfCompat();
+		ww = new WerewolfCompat(this);
 		if (pl != null) {
 			HandlerList.unregisterAll(pl);
 			pl = null;
@@ -301,24 +304,24 @@ public class VampireRevamp extends JavaPlugin {
 
 		// Paper compat
 		if (isPapermc && new SemVer(1, 13).compareTo(serverVersion) < 0) {
-			pl = new PhantomListener();
+			pl = new PhantomListener(this);
 			Bukkit.getPluginManager().registerEvents(pl, this);
 		}
 
 		if (wg != null && wg.useWG) {
-			dvl = new EntryVampiresListener();
+			dvl = new EntryVampiresListener(this);
 			Bukkit.getPluginManager().registerEvents(dvl, this);
 		}
 
 		if (isDisguiseEnabled) {
-			dl = new DisguiseListener();
+			dl = new DisguiseListener(this);
 			Bukkit.getPluginManager().registerEvents(dl, this);
 		}
 
 		if (conf.vampire.canSleepDaytime) {
 			if (plc != null) {
 				if (isPapermc) {
-					bl = new BedListener();
+					bl = new BedListener(this);
 					Bukkit.getPluginManager().registerEvents(bl, this);
 					plc.addPacketListener(bl.leaveButtonListener);
 				}
@@ -343,7 +346,7 @@ public class VampireRevamp extends JavaPlugin {
 	private boolean loadConfig(boolean loadDefaults) {
 		boolean result = false;
 		try {
-			this.conf = new PluginConfig(this.getConfig());
+			this.conf = new PluginConfig(this, this.getConfig());
 			log(Level.INFO, "Loaded configuration!");
 			debugLog(Level.INFO, this.conf.toString());
 			result = true;
@@ -353,7 +356,7 @@ public class VampireRevamp extends JavaPlugin {
 			ex.printStackTrace();
 			if (loadDefaults) {
 				log(Level.INFO, "Loading default config...");
-				this.conf = new PluginConfig();
+				this.conf = new PluginConfig(this);
 			}
 		}
 		boolean reloadPlayers = false;
@@ -401,7 +404,7 @@ public class VampireRevamp extends JavaPlugin {
 		}
 		if (reloadPlayers) {
 			for (Player p : Bukkit.getOnlinePlayers()) {
-				VampireRevamp.loadVPlayerFromDB(p.getUniqueId());
+				loadVPlayerFromDB(p.getUniqueId());
 			}
 		}
 
@@ -516,30 +519,30 @@ public class VampireRevamp extends JavaPlugin {
 		if (!loadLocales(true))
 			return;
 
-		CmdVampire baseCommand = new CmdVampire();
+		CmdVampire baseCommand = new CmdVampire(this);
 		manager.registerCommand(baseCommand);
 		baseCommand.initialize();
 		manager.getCommandCompletions().registerAsyncCompletion("yesno", c -> List.of("yes", "no"));
 		manager.getCommandCompletions().registerAsyncCompletion("reloads", c -> List.of("locales", "config", "all"));
 
-		altarDark = new AltarDark();
-		altarLight = new AltarLight();
+		altarDark = new AltarDark(this);
+		altarLight = new AltarLight(this);
 
 		// PlaceholderAPI
 		if(Bukkit.getPluginManager().getPlugin("PlaceholderAPI") != null) {
-			expansionPAPI = new VampireExpansion();
+			expansionPAPI = new VampireExpansion(this);
 			expansionPAPI.register();
 		}
 
 		// Listener
-		Bukkit.getPluginManager().registerEvents(new ListenerMain(), this);
+		Bukkit.getPluginManager().registerEvents(new ListenerMain(this), this);
 
 
 		BukkitScheduler scheduler = getServer().getScheduler();
 
 		cleanTaskId = scheduler.scheduleSyncRepeatingTask(this, () -> vPlayerManager.saveAll(SaveOperation.SAVE_ALL_AND_REMOVE_INACTIVE), 0L, 5 * 60 * 20L);
-		theTaskId = scheduler.scheduleSyncRepeatingTask(this, new TheTask(), 0L, (this.conf.general.taskDelayMillis * 20L) / 1000);
-		batTaskId = scheduler.scheduleSyncRepeatingTask(this, new BatTask(), 0L, (this.conf.general.batTaskDelayMillis * 20L) / 1000);
+		theTaskId = scheduler.scheduleSyncRepeatingTask(this, new TheTask(this), 0L, (this.conf.general.taskDelayMillis * 20L) / 1000);
+		batTaskId = scheduler.scheduleSyncRepeatingTask(this, new BatTask(this), 0L, (this.conf.general.batTaskDelayMillis * 20L) / 1000);
 	}
 
 	public static YamlConfiguration fileToYamlConfig (File file) throws IOException, InvalidConfigurationException {
@@ -549,7 +552,7 @@ public class VampireRevamp extends JavaPlugin {
 		return yamlConfiguration;
 	}
 
-	public static boolean localeLoader(File file, Locale locale) {
+	public boolean localeLoader(File file, Locale locale) {
 		boolean loaded = false;
 		try {
 			YamlConfiguration config = fileToYamlConfig(file);
@@ -579,7 +582,11 @@ public class VampireRevamp extends JavaPlugin {
 		return loaded;
 	}
 
-	public static void log(Level level, String rawMessage) {
+	public void log(Level level, String rawMessage) {
+		if (adventure == null) {
+			getLogger().log(level, rawMessage);
+			return;
+		}
 		TextColor color = null;
 		if (level == Level.SEVERE)
 			color = NamedTextColor.RED;
@@ -592,24 +599,24 @@ public class VampireRevamp extends JavaPlugin {
 		if (color != null)
 			message = message.colorIfAbsent(color);
 
-		plugin.adventure.console().sendMessage(message);
+		adventure.console().sendMessage(message);
 	}
 
-	public static void debugLog(Level level, String message) {
+	public void debugLog(Level level, String message) {
 		if (getVampireConfig().general.debug)
 			log(level, message);
 	}
 
 	public static VampireRevamp getInstance() {
-		return VampireRevamp.plugin;
+		return (VampireRevamp) Bukkit.getPluginManager().getPlugin("VampireRevamp");
 	}
 
-	public static PluginConfig getVampireConfig() {
-		return VampireRevamp.plugin.conf;
+	public PluginConfig getVampireConfig() {
+		return conf;
 	}
 
-	public static PaperCommandManager getCommandManager() {
-		return VampireRevamp.plugin.manager;
+	public PaperCommandManager getCommandManager() {
+		return manager;
 	}
 
 	public File getPlayerFolder() {
@@ -665,37 +672,37 @@ public class VampireRevamp extends JavaPlugin {
 		);
 	}
 
-	private static CommandIssuer getCommandIssuer(CommandSender sender) {
-		return getInstance().manager.getCommandIssuer(sender);
+	private CommandIssuer getCommandIssuer(CommandSender sender) {
+		return manager.getCommandIssuer(sender);
 	}
 
-	public static void sendMessage(CommandSender recipient, Component message) {
+	public void sendMessage(CommandSender recipient, Component message) {
 		if (recipient instanceof Player) {
-			plugin.adventure.player(((Player) recipient).getUniqueId()).sendMessage(message);
+			adventure.player(((Player) recipient).getUniqueId()).sendMessage(message);
 		} else if (recipient instanceof ConsoleCommandSender) {
-			plugin.adventure.console().sendMessage(message);
+			adventure.console().sendMessage(message);
 		} else {
 			recipient.spigot().sendMessage(BungeeComponentSerializer.get().serialize(message));
 		}
 	}
 
-	public static void sendMessage(CommandSender recipient, MessageType type, MessageKeyProvider keyProvider, String... replacements) {
+	public void sendMessage(CommandSender recipient, MessageType type, MessageKeyProvider keyProvider, String... replacements) {
 		Component message = getMessage(recipient, keyProvider, replacements);
 		sendMessage(recipient, message, type);
 	}
 
 	@SafeVarargs
-    public static void sendMessage(CommandSender recipient, MessageType type, MessageKeyProvider keyProvider, Tuple<String, Component>... replacements) {
+    public final void sendMessage(CommandSender recipient, MessageType type, MessageKeyProvider keyProvider, Tuple<String, Component>... replacements) {
 		Component message = getMessage(recipient, keyProvider, replacements);
 		sendMessage(recipient, message, type);
 	}
 
-	public static void sendMessage(CommandSender recipient, MessageType type, MessageKeyProvider keyProvider) {
+	public void sendMessage(CommandSender recipient, MessageType type, MessageKeyProvider keyProvider) {
 		Component message = getMessage(recipient, keyProvider);
 		sendMessage(recipient, message, type);
 	}
 
-	private static void sendMessage(CommandSender recipient, Component message, MessageType type) {
+	private void sendMessage(CommandSender recipient, Component message, MessageType type) {
 		NamedTextColor color = null;
 		if (type == MessageType.ERROR)
 			color = NamedTextColor.RED;
@@ -711,10 +718,10 @@ public class VampireRevamp extends JavaPlugin {
 	}
 
 	@SafeVarargs
-	public static List<Component> getMessageList(CommandSender recipient, MessageKeyProvider keyProvider, Tuple<String, Component>... replacements) {
-		String[] rawMessages = VampireRevamp.getCommandManager()
+	public final List<Component> getMessageList(CommandSender recipient, MessageKeyProvider keyProvider, Tuple<String, Component>... replacements) {
+		String[] rawMessages = getCommandManager()
 				.getLocales()
-				.getMessage(VampireRevamp.getCommandIssuer(recipient), keyProvider)
+				.getMessage(getCommandIssuer(recipient), keyProvider)
 				.split("\\r?\\n");
         return Arrays.stream(rawMessages)
 				.map((rm) -> MiniMessage.miniMessage().deserialize(rm))
@@ -724,18 +731,18 @@ public class VampireRevamp extends JavaPlugin {
 					}
 					return comp;
 				})
-				.toList();
+				.collect(Collectors.toList());
 	}
 
-	public static Component getMessage(CommandSender recipient, MessageKeyProvider keyProvider) {
-		String rawMessage =  VampireRevamp.getCommandManager()
+	public Component getMessage(CommandSender recipient, MessageKeyProvider keyProvider) {
+		String rawMessage =  getCommandManager()
 				.getLocales()
-				.getMessage(VampireRevamp.getCommandIssuer(recipient), keyProvider)
+				.getMessage(getCommandIssuer(recipient), keyProvider)
 				.replaceAll("\\r?\\n", "\n");
 		return MiniMessage.miniMessage().deserialize(rawMessage);
 	}
 
-	public static Component getMessage(CommandSender recipient, MessageKeyProvider keyProvider, String... replacements) {
+	public Component getMessage(CommandSender recipient, MessageKeyProvider keyProvider, String... replacements) {
 		if (replacements.length % 2 == 1)
 			throw new IllegalArgumentException("Odd number of replacements. Please contact the dev and send them the whole error");
 		Tuple<String, Component>[] tuples = new Tuple[replacements.length / 2];
@@ -746,7 +753,7 @@ public class VampireRevamp extends JavaPlugin {
 	}
 
 	@SafeVarargs
-    public static Component getMessage(CommandSender recipient, MessageKeyProvider keyProvider, Tuple<String, Component>... replacements) {
+    public final Component getMessage(CommandSender recipient, MessageKeyProvider keyProvider, Tuple<String, Component>... replacements) {
 		Component message = getMessage(recipient, keyProvider);
         for (Tuple<String, Component> replacement : replacements) {
             message = message.replaceText(
@@ -757,7 +764,7 @@ public class VampireRevamp extends JavaPlugin {
 	}
 
 	@NotNull
-	public static Component[] getYouAreWere(@NotNull CommandSender sender, @NotNull OfflinePlayer target, boolean self) {
+	public Component[] getYouAreWere(@NotNull CommandSender sender, @NotNull OfflinePlayer target, boolean self) {
 		Component you;
 		MessageKeyProvider areKey;
 		MessageKeyProvider wereKey;
@@ -777,19 +784,19 @@ public class VampireRevamp extends JavaPlugin {
 		return new Component[] {you, are, were};
 	}
 
-	public static void saveVPlayer(@Nullable UUID uuid) {
+	public void saveVPlayer(@Nullable UUID uuid) {
 		if (uuid == null)
 			return;
-		plugin.vPlayerManager.save(uuid);
+		vPlayerManager.save(uuid);
 	}
 
-	public static void saveVPlayer(@Nullable Player player) {
+	public void saveVPlayer(@Nullable Player player) {
 		if (player == null)
 			return;
 		saveVPlayer(player.getUniqueId());
 	}
 
-	public static void saveVPlayer(@Nullable OfflinePlayer offlinePlayer) {
+	public void saveVPlayer(@Nullable OfflinePlayer offlinePlayer) {
 		if (offlinePlayer == null)
 			return;
 		saveVPlayer(offlinePlayer.getUniqueId());
@@ -797,15 +804,15 @@ public class VampireRevamp extends JavaPlugin {
 
 	@Nullable
 	@Contract(value = "null -> null")
-	public static VPlayer getVPlayer(@Nullable UUID uuid) {
+	public VPlayer getVPlayer(@Nullable UUID uuid) {
 		if (uuid == null)
 			return null;
-		return playerCollection.computeIfAbsent(uuid, (k) -> plugin.vPlayerManager.tryGetDataNow(k));
+		return playerCollection.computeIfAbsent(uuid, (k) -> vPlayerManager.tryGetDataNow(k));
 	}
 
 	@Nullable
 	@Contract(value = "null -> null")
-	public static VPlayer getVPlayer(@Nullable Player player) {
+	public VPlayer getVPlayer(@Nullable Player player) {
 		if (player == null)
 			return null;
 		return getVPlayer(player.getUniqueId());
@@ -813,7 +820,7 @@ public class VampireRevamp extends JavaPlugin {
 
 	@Nullable
 	@Contract(value = "null -> null")
-	public static VPlayer getVPlayer(@Nullable OfflinePlayer offlinePlayer) {
+	public VPlayer getVPlayer(@Nullable OfflinePlayer offlinePlayer) {
 		if (offlinePlayer == null)
 			return null;
 		return getVPlayer(offlinePlayer.getUniqueId());
@@ -825,7 +832,7 @@ public class VampireRevamp extends JavaPlugin {
 	 * @return the previous stored value
 	 */
 	@Nullable
-	public static VPlayer storeVPlayer(@NotNull VPlayer vPlayer) {
+	public VPlayer storeVPlayer(@NotNull VPlayer vPlayer) {
 		return playerCollection.put(vPlayer.getUuid(), vPlayer);
 	}
 
@@ -833,7 +840,7 @@ public class VampireRevamp extends JavaPlugin {
 	 * Use this method at your own peril
 	 * @param uuid the UUID of the player to load
 	 */
-	public static void loadVPlayerFromDB(@NotNull UUID uuid) {
-		plugin.vPlayerManager.loadData(uuid);
+	public void loadVPlayerFromDB(@NotNull UUID uuid) {
+		vPlayerManager.loadData(uuid);
 	}
 }
